--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.14",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.8.1",
+    "@prisma/client": "^5.15.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -29,7 +29,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.303.0",
-    "next": "14.0.4",
+    "next": "^14.2.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.8",
@@ -52,7 +52,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.7.1",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
