--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zaplink",
+  "name": "thunderlink",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.14",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -25,9 +28,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.3.24",
     "lucide-react": "^0.395.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.5",
@@ -38,8 +42,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^2.0.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
